@@ -1,6 +1,11 @@
 2009-08-11 karl
     * Add new command, cptime, that uses the sysctl library call to get
-      CPU time statistics.
+      CPU time statistics.  Command takes an array name as an argument
+      and will fill it with system, user, nice, interrupt, idle, and
+      total clock counts.  Upon a second invocation with the same array
+      as an argument, it will calculate the cpu time of the various
+      elements as a percentage, returning those as key-value pairs and
+      update the array with the latest sampled values.
 
 2009-07-28 karl
     * Update README.FreeBSD to reflect that --with-tclinclude is not needed
